# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-05-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Start to add deployment examples for creating internal services
    * Update pqueue application based on (deployment) feedback
    * Small changes to service configuration and startup
    * Updates to release generation

2013-05-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add a more flexible interal service configuration that provides
      better support for OTP applications and allows OTP release loading
    * Fix issues with the CloudI Services API (timeouts added, 
      restart/shutdown handling for internal services and
      fix requests that don't reference a running service)
    * Move key2value.erl into a separate application

2013-03-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.2.1 (beta) released
    * Updated documentation
    * Add loadtest results

2013-03-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix external service init timeout bug

2013-03-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove the cowboy_old (v0.6.2) application since the latency
      problems in v1.2.0 were determined to be internal
      (the latency problems are now solved with previous commits)
    * Fix some Erlang process exit conditions

2013-03-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix latency due to the request_timeout_adjustment changes in the
      C/C++ CloudI API due to exception handling overhead
      which was ~175 ms for 20k@10kreq/s for g++ v4.6.3
      (now performance is the same as v1.1.0 with the C/C++ CloudI API
       when using a duo_mode internal service to send requests)
    * Fix latency due to the request_timeout_adjustment changes in the
      Java CloudI API due to exception handling overhead
      which was ~200 ms for 20k@10kreq/s for OpenJDK 64bit v1.6.0_24